--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ h3 {
    font-size: var(--h3-text);
 }
 
+html,
+body {
+   height: 100%;
+   width: 100%;
+}
+
+main {
+   display: flex;
+   height: 100%;
+   width: 100%;
+}
+
 .spacing {
    margin: var(--spacing-s) var(--spacing-l);
    padding: var(--spacing-s);
@@ -42,4 +54,10 @@ h3 {
 
 .hidden {
    visibility: hidden;
+}
+
+#app {
+   height: 100%;
+   display: flex;
+   flex-direction: column;
 }
