parte visual de tres en raya
Solo funciona de manera visual, no hay control sobre el juego, quién gana o quién pierde.

--- a/src/components/HeaderComponent/header.css
+++ b/src/components/HeaderComponent/header.css
@@ -1,4 +1,8 @@
 header {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   height: var(--header-height);
    text-align: center;
    border-bottom: 2px solid black;
    width: 100%;
