--- a/src/components/GameComponent/game.css
+++ b/src/components/GameComponent/game.css
@@ -1,21 +1,21 @@
 .game-section {
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+}
+
+.change-game {
+   position: fixed;
+   bottom: 0;
+   height: 90px;
    width: 100%;
-   display: grid;
-   grid-template-rows: 1fr;
-   grid-template-columns: 75px 1fr 75px;
+   display: flex;
+   justify-content: space-around;
 }
 
-.game-section > img {
-   width: 75px;
-   height: 75px;
-   align-self: center;
-   margin: 0px auto;
-   margin-bottom: var(--px-xl);
+.change-game > img {
+   height: 100%;
    cursor: pointer;
-}
-
-.next-game {
-   justify-self: flex-end;
 }
 
 .rps-color {
@@ -36,4 +36,10 @@
 .threeinrow-color {
    background-color: var(--threeinrow-primary);
    transition: 0.5s;
+}
+
+@media (max-width: 500px) {
+   .change-game {
+      justify-content: space-between;
+   }
 }
