--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
 :root {
-   --h1-text: 3vw;
-   --h2-text: 2.5vw;
-   --h3-text: 2vw;
-   --regular-text: 1.5vw;
+   --header-height: 75px;
+
+   --h1-text: 36px;
+   --h2-text: 30px;
+   --h3-text: 24px;
+   --big-text: 24px;
+   --regular-text: 18px;
 
    --spacing-l: 10%;
    --spacing-m: 5%;
@@ -19,23 +22,23 @@
 
    /* game-specific colors */
    /*Rock Paper Scissors*/
-   --rps-primary: #71ce71b6;
+   --rps-primary: #b7fcb7;
    --rps-secondary: #498649;
    --rock-color: #b49286;
    --scissor-color: #536b78;
    --paper-color: #7c94be;
 
    /*Bingo*/
-   --bingo-primary: #6fcacf8a;
+   --bingo-primary: #cbfcff;
    --bingo-secondary: #467599;
 
    /*Memory*/
-   --memory-primary: #ec4f54ad;
+   --memory-primary: #ffa8ab;
    --memory-secondary: #9b2e32;
 
    /*threeinrow*/
-   --threeinrow-primary: #ffe60059;
-   --threeinrow-secondary: #a39832;
+   --threeinrow-primary: #fff38a;
+   --threeinrow-secondary: #ccc161;
 }
 
 * {
@@ -62,13 +65,14 @@ h3 {
 html,
 body {
    height: 100%;
-   width: 100%;
 }
 
 main {
-   display: flex;
    height: 100%;
-   width: 100%;
+}
+
+#app {
+   height: calc(100% - var(--header-height));
 }
 
 .spacing {
@@ -84,8 +88,6 @@ header h1 {
    visibility: hidden;
 }
 
-#app {
-   height: 100%;
-   display: flex;
-   flex-direction: column;
+.d-none {
+   display: none;
 }
