tres en raya completado
tres en raya funciona perfectamente excepto una cosa visual, jugable por el momento, no he testeado mucho

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
    /*threeinrow*/
    --threeinrow-primary: #fff38a;
    --threeinrow-secondary: #ccc161;
+   --threeinrow-winningcell: rgba(148, 226, 148, 0.932);
 }
 
 * {
