--- a/src/components/ThreeInRowComponent/threeinrow.css
+++ b/src/components/ThreeInRowComponent/threeinrow.css
@@ -113,3 +113,36 @@
    grid-row: 1 / 2;
    grid-column: 1 / 3;
 }
+
+.winner-cell {
+   background-color: var(--threeinrow-winningcell);
+}
+
+.threeinrow-winner {
+   border-radius: 10px;
+   padding: var(--px-xs) var(--px-s);
+   height: 150px;
+   display: grid;
+   grid-template-rows: 20px 90px 20px;
+   grid-template-columns: 1fr;
+   align-items: center;
+   background-color: var(--threeinrow-winningcell);
+   justify-items: center;
+}
+
+.threeinrow-winner .cross {
+   display: block;
+   cursor: default;
+   width: 75px;
+   height: 75px;
+   object-fit: contain;
+   align-self: center;
+}
+
+.dir-restart {
+   background-color: var(--threeinrow-primary);
+   padding: 3px 5px;
+   border-radius: 10px;
+   cursor: pointer;
+   grid-row: 3 / 4;
+}
