Rock paper scissors empezado
Esqueleto del juego hecho, mayoritariamente visual, pero la lógica del componente "Game" no se rompe al cambiar de juego así que perfecto

--- a/src/components/GameComponent/game.css
+++ b/src/components/GameComponent/game.css
@@ -7,10 +7,14 @@
 .change-game {
    position: fixed;
    bottom: 0;
-   height: 75px;
+   height: var(--change-game-height);
    width: 100%;
    display: flex;
    justify-content: space-around;
+}
+
+.current-game {
+   height: calc((100%) - var(--change-game-height));
 }
 
 .change-game > img {
